✨ Adiciona vídeo ritual e botão do curso com delay na página aguarde

--- a/public/aguarde.html
+++ b/public/aguarde.html
@@ -171,7 +171,79 @@
       </iframe>
     </div>
 
-    <a href="https://pay.kiwify.com.br/KxpXn2t" id="botao-curso">🎁 Quero desbloquear minha alma agora</a>
+    <a href="https://pay.kiwify.com.br/KxpXn2t" id="botao-curso" style="display: none;">
+  🎁 Quero desbloquear minha alma agora
+</a>
+
+<div id="faq-curso" style="display: none; max-width: 800px; margin: 40px auto 0 auto; text-align: left; font-family: 'Arial', sans-serif;">
+
+  <h2 style="font-size: 24px; text-align: center; font-weight: 300; margin-bottom: 24px; color: #111;">
+    🔓 Descubra o que está por trás da sua travessia espiritual...
+  </h2>
+
+  <details style="border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin-bottom: 12px;">
+    <summary style="font-weight: bold; cursor: pointer; color: #333;">🌀 O que realmente serei capaz de enxergar após este curso?</summary>
+    <p style="margin-top: 10px; color: #444;">
+      Um novo mapa da sua alma — com camadas, zonas e raízes que antes estavam ocultas. Você será capaz de identificar suas vibrações dominantes, entender seus ciclos e agir com consciência espiritual sobre seus dons e feridas.
+    </p>
+  </details>
+
+  <details style="border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin-bottom: 12px;">
+    <summary style="font-weight: bold; cursor: pointer; color: #333;">📚 Qual é o conteúdo do curso Canva Espiritual?</summary>
+    <p style="margin-top: 10px; color: #444;">
+      O curso é formado por <strong>40 selos audiovisuais</strong>, com até 10 minutos cada, organizados em <strong>5 módulos ritualísticos</strong>:<br><br>
+      🔍 <strong>Módulo 1 – Espelho da Alma:</strong> Diagnóstico emocional e espiritual.<br>
+      🔑 <strong>Módulo 2 – Mapa Espiritual:</strong> Leis espirituais e polaridades vibracionais.<br>
+      🛡️ <strong>Módulo 3 – Ferramentas de Transmutação:</strong> Técnicas de elevação e blindagem.<br>
+      🏜️ <strong>Módulo 4 – Deserto Interior:</strong> Exercícios de solidão, silêncio e soberania.<br>
+      🌎 <strong>Módulo 5 – Cosmovisão e Propósito:</strong> Chamado individual e visão do Todo.<br><br>
+      🧾 Além das aulas em vídeo, você receberá um <strong>material complementar robusto em PDF</strong>, com mapas da alma, exercícios, reflexões simbólicas e ferramentas práticas. Esses materiais são distribuídos ao longo das aulas para aprofundar sua jornada.
+    </p>
+  </details>
+
+  <details style="border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin-bottom: 12px;">
+    <summary style="font-weight: bold; cursor: pointer; color: #333;">🔁 Quantas vezes posso acessar os conteúdos?</summary>
+    <p style="margin-top: 10px; color: #444;">
+      Você terá acesso total por 12 meses. O curso é um altar digital — e você pode voltar sempre que precisar realinhar sua alma.
+    </p>
+  </details>
+
+  <details style="border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin-bottom: 12px;">
+    <summary style="font-weight: bold; cursor: pointer; color: #333;">🌈 Esse curso serve para qualquer fé?</summary>
+    <p style="margin-top: 10px; color: #444;">
+      Sim. O Canva Espiritual honra todas as tradições que buscam a verdade, a luz e o bem. Ele não impõe doutrinas — ele revela leis espirituais universais que ecoam em todas as culturas e tempos.
+    </p>
+  </details>
+
+  <details style="border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin-bottom: 12px;">
+    <summary style="font-weight: bold; cursor: pointer; color: #333;">🔐 O que há por trás das “chaves espirituais”?</summary>
+    <p style="margin-top: 10px; color: #444;">
+      Cada chave representa uma travessia interior:<br><br>
+      • <strong>Leitura Espiritual:</strong> a alma se revela.<br>
+      • <strong>Autogoverno:</strong> você retoma o comando.<br>
+      • <strong>Blindagem Espiritual:</strong> escudo contra influências externas.<br>
+      • <strong>Transcendência:</strong> você aprende a voar por dentro.<br>
+      • <strong>Cosmovisão:</strong> você se alinha ao Todo.<br><br>
+      Juntas, essas chaves ativam áreas sutis e profundas do seu ser.
+    </p>
+  </details>
+
+  <details style="border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin-bottom: 12px;">
+    <summary style="font-weight: bold; cursor: pointer; color: #333;">🤝 Por que não posso mais caminhar sozinho?</summary>
+    <p style="margin-top: 10px; color: #444;">
+      Porque agora você vê. E quem vê, não pode mais fingir que está cego. Este curso foi criado para te acompanhar na travessia — com verdade, clareza e suporte espiritual real.
+    </p>
+  </details>
+
+  <details style="border: 1px solid #ddd; border-radius: 8px; padding: 16px;">
+    <summary style="font-weight: bold; cursor: pointer; color: #333;">💸 E se eu não gostar? Posso pedir reembolso?</summary>
+    <p style="margin-top: 10px; color: #444;">
+      Sim. Você tem <strong>7 dias de garantia incondicional</strong>, disponível direto na plataforma. Após a compra, basta acessar sua conta e clicar em <em>“Reembolsar”</em>. Sem burocracias. Sem explicações obrigatórias.
+    </p>
+  </details>
+
+</div>
+
   </div>
 
   <script src="https://player.vimeo.com/api/player.js"></script>
@@ -265,10 +337,13 @@
           contador.style.display = 'none';
           tempoRestante.style.display = 'none';
           videoWrapper.style.display = 'block';
-
+          
           setTimeout(() => {
-            botaoCurso.style.display = 'inline-block';
-          }, 30000);
+          botaoCurso.style.display = 'inline-block';
+          const blocoFAQ = document.getElementById('faq-curso');
+          if (blocoFAQ) blocoFAQ.style.display = 'block';
+           }, 30000);
+
         }
       }, 1000);
     }
