--- a/public/pagar.html
+++ b/public/pagar.html
@@ -83,72 +83,112 @@
 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6 px-2 max-w-5xl mx-auto">
 
   <!-- Plano 1 -->
-  <div class="bg-white shadow-lg rounded-lg p-5 border border-green-600">
-    <h3 class="text-lg font-bold text-green-700 mb-1">🧭 Mapa Base da Alma</h3>
-    <p class="text-xl font-bold text-gray-800 mb-2">R$12</p>
-    <p class="text-sm text-gray-600 mb-3">🔎 Ideal para quem busca clareza emocional e direção interior.</p>
-    <ul class="text-sm text-gray-700 space-y-1 mb-4">
-      <li>✔️ Reflexo da alma (12 espelhos principais)</li>
-      <li>✔️ Reflexo na vida familiar</li>
-      <li>✔️ Reflexo na vida social</li>
-      <li>✔️ Reflexo na vida profissional</li>
-      <li>✔️ Arquétipo dominante (técnico e simbólico)</li>
-      <li>✔️ Exercício de elevação personalizado</li>
-      <li>🎁 <strong>Aula bônus – A engenharia da desconexão espiritual</strong> <span class="text-gray-600">(🎥 Videodiagnóstico da era da distração, vício e fragmentação interior)</span></li>
+ <div class="bg-white shadow-lg rounded-lg p-5 border border-green-600">
+  <h3 class="text-lg font-bold text-green-700 mb-1">🧭 Mapa Base da Alma</h3>
+  <p class="text-sm text-gray-600 mb-3">🔎 Ideal para quem busca clareza emocional e direção interior.</p>
+  <ul class="text-sm text-gray-700 space-y-1 mb-4">
+    <li>✔️ Reflexo da alma (12 espelhos principais)</li>
+    <li>✔️ Reflexo na vida familiar</li>
+    <li>✔️ Reflexo na vida social</li>
+    <li>✔️ Reflexo na vida profissional</li>
+    <li>✔️ Arquétipo dominante (técnico e simbólico)</li>
+    <li>✔️ Exercício de elevação personalizado</li>
+    <li>🎁 <strong>Aula bônus – A engenharia da desconexão espiritual</strong></li>
+  </ul>
+  <div class="border border-green-600 rounded-md p-3 bg-green-50 mb-4">
+  <p class="text-sm italic font-bold text-green-700 mb-1">
+    ☕ Menos que um café que se dissolve, e este diagnóstico se eterniza em você.
+  </p>
+  <p class="text-xl font-bold text-gray-800 text-center">R$12</p>
+
+</div>
 
 
-    </ul>
-    <button onclick="irParaPagamento('basico')" class="w-full py-2 bg-green-600 text-white rounded font-medium hover:bg-green-700 transition">Escolher Mapa Base</button>
-  </div>
+  <button onclick="irParaPagamento('basico')" class="w-full py-2 bg-green-600 text-white rounded font-medium hover:bg-green-700 transition">Escolher Mapa Base</button>
+  <p class="text-center text-sm mt-2 text-gray-500 italic">
+  ⏱️ Entrega imediata após a confirmação
+</p>
+</div>
 
   <!-- Plano 2 -->
-  <div class="bg-white shadow-lg rounded-lg p-5 border border-blue-600">
-    <h3 class="text-lg font-bold text-blue-700 mb-1">🧭 Diagnóstico Interdimensional</h3>
-    <p class="text-xl font-bold text-gray-800 mb-2">R$21</p>
-    <p class="text-sm text-gray-600 mb-3">🧠 Para quem sente que há forças ao redor moldando sua alma e quer identificá-las.</p>
-    <ul class="text-sm text-gray-700 space-y-1 mb-4">
-      <li>✔️ Reflexo da alma (12 espelhos principais)</li>
-      <li>✔️ Reflexo na vida familiar</li>
-      <li>✔️ Reflexo na vida social</li>
-      <li>✔️ Reflexo na vida profissional</li>
-      <li>✔️ Arquétipo dominante (técnico e simbólico)</li>
-      <li>✔️ Exercício de elevação personalizado</li>
-      <li>🔓 <strong>Gatilhos sensoriais</strong> (olfato, visão, tato, paladar, audição)</li>
-      <li>🔓 <strong>Mapa da Alma</strong> (12 faces e 12 níveis)</li>
-      <li>🔓 <strong>Reflexo espiritual personalizado</strong></li>
-      <li>🎁 <strong>Aula bônus – A engenharia da desconexão espiritual</strong> <span class="text-gray-600">(🎥 Videodiagnóstico da era da distração, vício e fragmentação interior)</span></li>
-
-
-    </ul>
-    <button onclick="irParaPagamento('intermediario')" class="w-full py-2 bg-blue-600 text-white rounded font-medium hover:bg-blue-700 transition">Escolher Diagnóstico Interdimensional</button>
+ <div class="relative bg-white shadow-lg rounded-lg p-5 border-4 border-blue-600">
+  <!-- Etiqueta lateral esquerda -->
+  <div class="absolute -top-3 right-4 bg-blue-600 text-white text-xs sm:text-sm font-bold px-3 py-1 rounded shadow-md">
+    📌 Mais escolhido
   </div>
+  <h3 class="text-lg font-bold text-blue-700 mb-1">🧭 Diagnóstico Interdimensional</h3>
+  <p class="text-sm text-gray-600 mb-3">🧠 Para quem sente que há forças ao redor moldando sua alma e quer identificá-las.</p>
+  <ul class="text-sm text-gray-700 space-y-1 mb-4">
+    <li>✔️ Reflexo da alma (12 espelhos principais)</li>
+    <li>✔️ Reflexo na vida familiar</li>
+    <li>✔️ Reflexo na vida social</li>
+    <li>✔️ Reflexo na vida profissional</li>
+    <li>✔️ Arquétipo dominante (técnico e simbólico)</li>
+    <li>✔️ Exercício de elevação personalizado</li>
+    <li>🔓 <strong>Gatilhos sensoriais</strong> (olfato, visão, tato, paladar, audição)</li>
+    <li>🔓 <strong>Mapa da Alma</strong> (12 faces e 12 níveis)</li>
+    <li>🔓 <strong>Reflexo espiritual personalizado</strong></li>
+    <li>🔓 <strong>Protocolo geral de elevação</strong></li>
+    <li>🎁 <strong>Aula bônus – A engenharia da desconexão espiritual</strong> <span class="text-gray-600">(🎥 Videodiagnóstico da era da distração, vício e fragmentação interior)</span></li>
+  </ul>
+<div class="border border-blue-600 rounded-md p-3 bg-blue-50 mb-4 text-center">
+    <p class="text-sm italic font-bold text-blue-700 mb-1">
+      🍟 Troque um fast-food por um despertar profundo.
+    </p>
+    <p class="text-xl font-bold text-gray-800">R$21</p>
+  </div>
+  <button onclick="irParaPagamento('intermediario')" class="w-full py-2 bg-blue-600 text-white rounded font-medium hover:bg-blue-700 transition">Escolher Diagnóstico Interdimensional</button>
+<p class="text-center text-sm mt-2 text-gray-500 italic">
+  ⏱️ Entrega imediata após a confirmação
+</p>
+</div>
+
 
   <!-- Plano 3 -->
    
-  <div class="border border-purple-500 rounded-lg p-4 bg-white shadow-md">
-    <h3 class="text-lg font-bold text-purple-700 mb-1">🧭 Diagnóstico Corpo-Mente-Espírito</h3>
-    <p class="text-xl font-bold text-gray-800 mb-2">R$40</p>
-    <p class="text-sm text-gray-600 mb-3">🌈 Para quem busca alinhamento total entre essência, saúde e propósito.</p>
-    <ul class="text-sm text-gray-700 space-y-1 mb-4">
-      <li>✔️ Reflexo da alma (12 espelhos principais)</li>
-      <li>✔️ Reflexo na vida familiar</li>
-      <li>✔️ Reflexo na vida social</li>
-      <li>✔️ Reflexo na vida profissional</li>
-      <li>✔️ Arquétipo dominante (técnico e simbólico)</li>
-      <li>✔️ Exercício de elevação personalizado</li>
-      <li>🔓 <strong>Gatilhos sensoriais</strong> (olfato, visão, tato, paladar, audição)</li>
-      <li>🔓 <strong>Mapa da Alma</strong> (12 faces e 12 níveis)</li>
-      <li>🔓 <strong>Reflexo espiritual personalizado</strong></li>
-      <li>🔐 <strong>Mapa do Espírito</strong> (10 faces e 13 níveis)</li>
-      <li>🔐 <strong>Sinais físicos e comportamentais</strong></li>
-      <li>🔐 <strong>Predisposição fisiológica</strong> (curto e longo prazo)</li>
-      <li>🔐 <strong>Predisposição saúde mental</strong> (curto e longo prazo)</li>
-      <li>🎁 <strong>Aula bônus – A engenharia da desconexão espiritual</strong> <span class="text-gray-600">(🎥 Videodiagnóstico da era da distração, vício e fragmentação interior)</span></li>
-
-
-    </ul>
-    <button onclick="irParaPagamento('completo')" class="w-full py-2 bg-purple-600 text-white rounded font-medium hover:bg-purple-700 transition">Escolher Diagnóstico Completo</button>
+  <div class="relative border-2 border-yellow-500 rounded-lg p-4 bg-white shadow-lg">
+  <!-- Etiqueta Mais Elevado -->
+  <div class="absolute -top-3 right-4 bg-yellow-500 text-white text-xs sm:text-sm font-bold px-3 py-1 rounded shadow-md">
+    👑 Mais Elevado
   </div>
+
+  <h3 class="text-lg font-bold text-yellow-700 mb-1">🧭 Diagnóstico Corpo-Mente-Espírito</h3>
+  <p class="text-sm text-gray-600 mb-3">🌈 Para quem busca alinhamento total entre essência, saúde e propósito.</p>
+
+  <ul class="text-sm text-gray-700 space-y-1 mb-4">
+    <li>✔️ Reflexo da alma (12 espelhos principais)</li>
+    <li>✔️ Reflexo na vida familiar</li>
+    <li>✔️ Reflexo na vida social</li>
+    <li>✔️ Reflexo na vida profissional</li>
+    <li>✔️ Arquétipo dominante (técnico e simbólico)</li>
+    <li>✔️ Exercício de elevação personalizado</li>
+    <li>🔓 <strong>Gatilhos sensoriais</strong> (olfato, visão, tato, paladar, audição)</li>
+    <li>🔓 <strong>Mapa da Alma</strong> (12 faces e 12 níveis)</li>
+    <li>🔓 <strong>Reflexo espiritual personalizado</strong></li>
+    <li>🔓 <strong>Protocolo geral de elevação</strong></li>
+    <li>🔐 <strong>Mapa do Espírito</strong> (10 faces e 13 níveis)</li>
+    <li>🔐 <strong>Sinais físicos e comportamentais</strong></li>
+    <li>🔐 <strong>Predisposição fisiológica</strong> (curto e longo prazo)</li>
+    <li>🔐 <strong>Predisposição saúde mental</strong> (curto e longo prazo)</li>
+    <li>🎁 <strong>Aula bônus – A engenharia da desconexão espiritual</strong> <span class="text-gray-600">(🎥 Videodiagnóstico da era da distração, vício e fragmentação interior)</span></li>
+  </ul>
+
+  <div class="border border-yellow-500 rounded-md p-3 bg-yellow-50 mb-4 text-center">
+    <p class="text-sm italic font-bold text-yellow-700 mb-1">
+      🧠 Menos que um dia de terapia — e revela onde seu espírito sangra.
+    </p>
+    <p class="text-xl font-bold text-gray-800">R$40</p>
+  </div>
+
+  <button onclick="irParaPagamento('completo')" class="w-full py-2 bg-yellow-500 text-white rounded font-semibold hover:bg-yellow-600 transition">
+    👑 Escolher Diagnóstico Completo
+  </button>
+
+  <p class="text-center text-sm mt-2 text-gray-500 italic">
+    ⏱️ Entrega imediata após a confirmação
+  </p>
+</div>
+
 </div>
 <p class="text-center text-xs text-gray-500 italic mt-6 mb-10">
   ⏳ <span class="font-semibold text-gray-600">Atenção:</span>
@@ -243,7 +283,16 @@
     <div class="border border-purple-500 rounded-lg p-4 bg-white shadow-md flex flex-col justify-between h-full">
      <div class="max-w-4xl mx-auto mt-1 px-4">
       <h2 class="text-xl font-bold text-center mb-4">🎓 Formação Profunda: <span class="text-purple-700">Travessia Espiritual</span></h2>
- 
+ <div class="w-full max-w-md mx-auto aspect-[9/16] sm:aspect-video mb-4 rounded overflow-hidden shadow-md">
+  <iframe
+    src="https://player.vimeo.com/video/1090623287?h=9f5dccfe7b&badge=0&autopause=0&player_id=0&app_id=58479"
+    frameborder="0"
+    allow="autoplay; fullscreen; picture-in-picture"
+    allowfullscreen
+    class="w-full h-full">
+  </iframe>
+</div>
+
     
     <p class="mb-3 text-sm leading-relaxed">
       Você já entendeu que existe uma <strong>guerra invisível entre virtudes e vícios</strong> dentro de você. <br />
