Ajustes finais: ocultando .env, removendo rota de simulação e refinando relatórios

--- a/public/pagar.html
+++ b/public/pagar.html
@@ -185,7 +185,7 @@
   </button>
 
   <p class="text-center text-sm mt-2 text-gray-500 italic">
-    ⏱️ Entrega imediata após a confirmação
+    ⏱️ Entrega imediata após a confirmação - 36 a 38 paginas
   </p>
 </div>
 
