--- a/public/quiz.html
+++ b/public/quiz.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz Espiritual - Mapa da Alma</title>
   <script src="https://cdn.tailwindcss.com"></script>
    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+     <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '208458446274723');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=208458446274723&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+<!-- Evento desta página (ViewContent) -->
+<script>
+  fbq('track', 'ViewContent', {
+    content_name: 'Mapa da Alma - Quiz',
+    content_category: 'quiz'
+  });
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9QDEN04CQM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  // Configura o GA4 com seu ID
+  gtag('config', 'G-9QDEN04CQM');
+    // 👇 ADIÇÃO: ativa o Google Ads nesta página
+  gtag('config', 'AW-936695843');
+
+  // 👇 ADIÇÃO: evento da conversão "Entrou no Quiz"
+  gtag('event', 'conversion', {
+    'send_to': 'AW-936695843/V9hFCKeIipcbEKOw074D'
+  });
+</script>
+
+<script>
+  gtag('event', 'view_item', {
+    currency: 'BRL',
+    value: 0,
+    items: [{
+      item_id: 'quiz',
+      item_name: 'Mapa da Alma - Quiz',
+      item_category: 'quiz'
+    }]
+  });
+
+  // opcional: início do quiz
+  function quizStartGA(){
+    gtag('event', 'start_quiz', {
+      content_category: 'quiz'
+    });
+  }
+</script>
+
 </head>
 
 <body class="bg-white text-gray-800 font-sans">
@@ -23,9 +87,10 @@
 
     <p class="text-gray-600 text-sm">Há correntes que só se revelam quando fechamos os olhos para fora.</p>
     <p class="text-gray-600 text-sm">Este é um momento só seu. Um espelho silencioso será revelado.</p>
-    <button onclick="mostrarPergunta(0)" class="mt-3 px-6 py-3 bg-[#143d59] text-white rounded-md shadow-md hover:scale-105 transition transform duration-300 animate-pulse">
-      Iniciar Diagnóstico
-    </button>
+    <button id="btnComecarQuiz" onclick="quizStart();mostrarPergunta(0)" class="mt-3 px-6 py-3 bg-[#143d59] text-white rounded-md shadow-md hover:scale-105 transition transform duration-300 animate-pulse">
+  Iniciar Diagnóstico
+</button>
+
     <p class="text-xs text-gray-400 mt-2 italic">
       Autoanálise gratuita • Protocolo Geral – Mapa da Alma
     </p>
@@ -48,9 +113,9 @@
 
   <!-- Injeção global dos dados -->
   <script type="module">
-    import detalhesFe from './fe-detalhes.js';
-    import detalhesServidao from './servidao-detalhes.js';
-    import detalhesBencao from './bencao-detalhes.js';
+    import  detalhesFe from './fe-detalhes.js';
+    import  detalhesServidao from './servidao-detalhes.js';
+    import  detalhesBencao from './bencao-detalhes.js';
 
     window.detalhesFe = detalhesFe;
     window.detalhesServidao = detalhesServidao;
@@ -77,6 +142,17 @@
       </button>
     </div>
   </div>
-  
+  <script>
+  function quizStart(){
+    // Evento custom (opcional, mas recomendado)
+    if (typeof fbq === 'function') {
+      fbq('trackCustom', 'QuizStart', {
+        step: 'start',
+        content_category: 'quiz'
+      });
+    }
+  }
+</script>
+
 </body>
 </html>
