feat(quiz/checkout): alerta fixo, trailer t1, Clarity em pagar, eventos Meta/GA

--- a/public/travessia.html
+++ b/public/travessia.html
@@ -359,7 +359,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_rgba(245,200,76,0.12),transparent_60%)]"></div>
     <div class="max-w-6xl mx-auto px-4 pt-14 pb-16 grid lg:grid-cols-2 gap-10 items-center">
       <div>
-        <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold leading-tight">Aprenda <span class="text-gold">Espiritualidade Aplicada</span> sem enrolação.</h1>
+        <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold leading-tight">Aprenda <span class="text-gold">Autoconhecimento e Espiritualidade Aplicada</span> sem enrolação.</h1>
         <p class="mt-4 text-white/80 text-lg">Curso direto ao ponto por <strong>R$39</strong>. Veja o conteúdo completo, assista 1 de <strong>5 aulas experimentais</strong> e comece hoje.</p>
         <div class="mt-6 flex flex-wrap gap-3">
         <a href="#aulas"
@@ -633,6 +633,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     <div class="max-w-6xl mx-auto px-4 grid lg:grid-cols-2 gap-10 items-center">
       <div class="glass rounded-2xl p-6">
         <h3 class="text-2xl font-extrabold">Acesso completo hoje</h3>
+        <div class="deal-badge">Oferta exclusiva deste anúncio — foram abertas apenas 20 vagas com este valor simbólico.</div>
         <ul class="mt-4 space-y-3 text-white/80">
           <li>• Curso completo por <strong>R$39</strong></li>
           <li>• Acesso imediato e por 12 meses</li>
@@ -1199,6 +1200,10 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         <div class="aspect-video">
           <iframe id="trialFrame" class="w-full h-full" src="" title="Aula experimental" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div class="p-4 border-t border-white/10 text-center">
+  <p class="text-xs text-white/70">Oferta exclusiva deste anúncio — foram abertas apenas 20 vagas com este valor simbólico.</p>
+</div>
+
         <div class="p-4 border-t border-white/10 text-center">
   <a href="#comprar"
      class="inline-flex items-center justify-center bg-gold text-black font-semibold px-5 py-3 rounded-xl shadow-soft hover:scale-[1.02] transition">
