--- a/public/pagar.html
+++ b/public/pagar.html
@@ -60,6 +60,19 @@ src="https://www.facebook.com/tr?id=734281049586138&ev=PageView&noscript=1"/></n
     }]
   });
 </script>
+<!-- Microsoft Clarity -->
+<script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+    c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+    t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+    y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "tg0bonz3au");
+</script>
+
+<!-- Opcional: rotular a página no Clarity -->
+<script>
+  try{ clarity && clarity('set','page','checkout_options'); }catch(e){}
+</script>
 
 </head>
 
@@ -639,6 +652,9 @@ function irParaPagamento(tipo) {
     fbq('trackCustom', 'SelectPlan', { plan: tipoCanonical });
     fbq('track', 'InitiateCheckout', { value: price, currency: 'BRL' });
   }
+  try{
+  clarity && clarity('event', 'select_plan', { plan: tipoCanonical, value: price, currency: 'BRL' });
+}catch(e){}
   const qs = new URLSearchParams(window.location.search);
   const ref = qs.get("ref") || qs.get("aff");
   const refPart = ref ? `&ref=${encodeURIComponent(ref)}` : "";
