--- a/public/pagar.html
+++ b/public/pagar.html
@@ -676,6 +676,74 @@ function irParaPagamento(tipo) {
 </script>
 
 
+<!-- Tempo na página (checkout) — 30/60/120/180s → Meta + GA4 -->
+<script>
+(function(){
+  // Marcos em segundos
+  const MARKS = [30, 60, 120, 180];
+  const fired = new Set();
+
+  // Contexto da página (checkout de opções do diagnóstico)
+  const Ctx = {
+    id: 'checkout_quiz_options',
+    name: 'Checkout — Escolha Diagnóstico',
+    category: 'checkout',
+    price: 0,
+    currency: 'BRL'
+  };
+
+  // Contar apenas quando a aba está visível
+  let active = !document.hidden;
+  document.addEventListener('visibilitychange', function(){
+    active = !document.hidden;
+  });
+
+  let seconds = 0;
+  const timer = setInterval(function(){
+    if (!active) return;
+    seconds++;
+
+    for (let i = 0; i < MARKS.length; i++){
+      const t = MARKS[i];
+      if (seconds >= t && !fired.has(t)){
+        fired.add(t);
+
+        // Meta Pixel (custom)
+        if (typeof fbq === 'function'){
+          fbq('trackCustom', 'TimeOnPage', {
+            seconds: t,
+            content_ids: [Ctx.id],
+            content_name: Ctx.name,
+            content_type: 'product',
+            content_category: Ctx.category,
+            currency: Ctx.currency,
+            value: Ctx.price
+          });
+        }
+
+        // GA4 (custom)
+        if (typeof gtag === 'function'){
+          gtag('event', 'time_on_page', {
+            seconds: t,
+            currency: Ctx.currency,
+            value: Ctx.price,
+            items: [{
+              item_id: Ctx.id,
+              item_name: Ctx.name,
+              item_category: Ctx.category,
+              price: Ctx.price,
+              quantity: 1
+            }]
+          });
+        }
+      }
+    }
+  }, 1000);
+
+  // Limpa o timer ao sair
+  window.addEventListener('beforeunload', function(){ clearInterval(timer); });
+})();
+</script>
 
 
 </body>
