atualização tempo do video legendado

--- a/public/codigodaharmonia.html
+++ b/public/codigodaharmonia.html
@@ -61,8 +61,8 @@ fbq('track', 'ViewContent', {
 <!-- ===== Retenção por marcos (Meta + GA4; Ads opcional) ===== -->
 <script>
 (function(){
-  var VIDEO_ID = window.VIDEO_ID || '68fbab9e0daa4ea4dd6dbddd';
-  var REVEAL_AT_SECONDS = window.REVEAL_AT_SECONDS || 1780; // 30:17
+  var VIDEO_ID = window.VIDEO_ID || '69050dfc21067174bb51c90b';
+  var REVEAL_AT_SECONDS = window.REVEAL_AT_SECONDS || 1817; // 30:17
   var WATCH_MARKS = window.WATCH_MARKS || [30, 90, 180, 360, 800, REVEAL_AT_SECONDS];
 
   var firedMarksKey = 'vturb_marks_fired_' + VIDEO_ID;
@@ -172,7 +172,7 @@ fbq('track', 'ViewContent', {
 <body>
   <header class="wrap center">
     <h1>Código da Harmonia</h1>
-    <p class="sub">mapa revelado</p>
+    <p class="sub">O método que explica as doenças invisíveis da alma</p>
   </header>
 
   <main class="wrap">
@@ -181,12 +181,13 @@ fbq('track', 'ViewContent', {
       <div class="ratio"></div>
       <div class="player-abs">
         <!-- Embed novo colado do painel -->
-        <vturb-smartplayer id="vid-68fbab9e0daa4ea4dd6dbddd" style="display: block; margin: 0 auto; width: 100%; max-width: 400px;"></vturb-smartplayer>
-        <script type="text/javascript">
-          var s=document.createElement("script");
-          s.src="https://scripts.converteai.net/ab0d5dbd-353e-4147-a5c6-52ab96121828/players/68fbab9e0daa4ea4dd6dbddd/v4/player.js",
-          s.async=!0,document.head.appendChild(s);
-        </script>
+        <vturb-smartplayer id="vid-69050dfc21067174bb51c90b" style="display: block; margin: 0 auto; width: 100%; max-width: 400px;"></vturb-smartplayer>
+<script type="text/javascript">
+  var s=document.createElement("script");
+  s.src="https://scripts.converteai.net/ab0d5dbd-353e-4147-a5c6-52ab96121828/players/69050dfc21067174bb51c90b/v4/player.js",
+  s.async=!0,document.head.appendChild(s);
+</script>
+
       </div>
     </section>
 
@@ -243,8 +244,8 @@ fbq('track', 'ViewContent', {
 
   <script>
     /* ====== CONFIG GERAL ====== */
-    const VIDEO_ID = '68fbab9e0daa4ea4dd6dbddd';
-    const REVEAL_AT_SECONDS = 1697; // 30:17 (timeline do vídeo)
+    const VIDEO_ID = '69050dfc21067174bb51c90b';
+    const REVEAL_AT_SECONDS = 1700; // 30:17 (timeline do vídeo)
     const STORAGE_KEY = `vturb_progress_${VIDEO_ID}`;
 
     /* ====== CONFIG KIWIFY ====== */
